force-app/main/default/objects/Licence_Master__c/Licence_Master__c.object-meta.xml
<CustomObject>
    <label>Licence and Certification</label>
    <nameField>
        <label>Licence/Certification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licences and Certifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>