force-app/main/default/objects/Licence_Master__c/fields/I_RS_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licence_Number__c</fullName>
    <label>Licence/Certification Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>