force-app/main/default/objects/Licence_Master__c/fields/I_RS_Licensee__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Licensee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Licences</relationshipLabel>
    <relationshipName>Licences</relationshipName>
    <type>Lookup</type>
</CustomField>