force-app/main/default/objects/Licence_Master__c/fields/I_RS_State__c.field-meta.xml
<CustomField>
    <fullName>I_RS_State__c</fullName>
    <inlineHelpText>State the licence is applicable for</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>