force-app/main/default/objects/Licence_Master__c/fields/I_RS_Status__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>OGTR Current</fullName>
            </value>
            <value>
                <fullName>OGTR Suspended</fullName>
            </value>
            <value>
                <fullName>OGTR Surrendered</fullName>
            </value>
            <value>
                <fullName>OGTR Submitted</fullName>
            </value>
            <value>
                <fullName>OGTR Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>