force-app/main/default/objects/Licence_Master__c/validationRules/End_Date_greater_to_Start_Date_Licence.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_greater_to_Start_Date_Licence</fullName>
    <active>true</active>
    <errorConditionFormula>I_RS_End_Date__c &lt; I_RS_Start_Date__c</errorConditionFormula>
    <errorDisplayField>I_RS_End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be less than Start Date</errorMessage>
</ValidationRule>