force-app/main/default/objects/Licence_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>I_RS_Licence_Number__c</columns>
    <columns>I_RS_State__c</columns>
    <columns>I_RS_Start_Date__c</columns>
    <columns>I_RS_End_Date__c</columns>
    <columns>I_RS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>